--- a/templates/components/custom/product/technical-sheet.html
+++ b/templates/components/custom/product/technical-sheet.html
@@ -11,7 +11,7 @@
             <span>TECHNICAL DATA SHEEETS</span>
         </a>
     </div>
-    <div class="technical-sheet__item">
+    <div class="technical-sheet__item technical-sheet__item--certificate">
         <a href="#" class="technical-sheet__link">
             <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/iso-certified.png" alt="Certified Company">
         </a>
