--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -64,7 +64,7 @@
                 {{/if}}
             </div>
         </figure>
-        <ul class="productView-thumbnails hide-on-tablet"{{#gt product.images.length 4}} data-slick='{
+        <ul class="productView-thumbnails hide-on-tablet"{{#gt product.images.length 1}} data-slick='{
                 "infinite": false,
                 "mobileFirst": true,
                 "dots": false,
@@ -139,14 +139,7 @@
             {{/if}}
             <div class="productView-rating">
                 {{#if settings.show_product_rating}}
-                    {{> components/products/ratings rating=product.rating}}
-                    {{#if product.num_reviews '>' 0}}
-                        <a href="{{product.url}}{{#if is_ajax}}#product-reviews{{/if}}" id="productReview_link">
-                            {{lang 'products.reviews.link_to_review' total=product.num_reviews}}
-                        </a>
-                    {{else}}
-                        <span>{{lang 'products.reviews.link_to_review' total=product.num_reviews}}</span>
-                    {{/if}}
+                    {{> components/products/ratings rating=product.rating product_top=true}}
                 {{/if}}
                 {{#if settings.show_product_reviews}}
                     <a href="{{product.url}}{{#if is_ajax}}#write_review{{/if}}"
