--- a/templates/components/products/reviews.html
+++ b/templates/components/products/reviews.html
@@ -1,9 +1,9 @@
 {{#if reviews.total}}
-<section class="toggle productReviews" id="product-reviews" data-product-reviews>
+<section class="toggle productReviews custom-productReviews" id="product-reviews" data-product-reviews>
     <h4 class="toggle-title">
         {{lang 'products.reviews.header' total=reviews.total}}
         {{#if theme_settings.show_product_reviews}}
-            <a class="toggleLink is-open" data-collapsible href="#productReviews-content">
+            <a class="toggleLink is-open" data-collapsible href="#productReviews-content" style="display: none;">
                 <span class="toggleLink-text toggleLink-text--on">
                     {{lang 'products.reviews.hide'}}
                 </span>
@@ -19,20 +19,16 @@
             <li class="productReview">
                 <article>
                     <header>
+                        <p class="productReview-date">
+                            {{{ date }}}
+                        </p>
+                        
                         <span class="productReview-rating rating--small">
                             {{> components/products/ratings rating=rating}}
                             <span class="productReview-ratingNumber">{{ rating }}</span>
                         </span>
+                                              
                         <h5 class="productReview-title">{{{ sanitize title }}}</h5>
-                        {{#if name}}
-                            <p class="productReview-author">
-                                {{{lang 'products.reviews.post_on_by' date=date name=(sanitize name) }}}
-                            </p>
-                        {{else}}
-                            <p class="productReview-author">
-                                {{lang 'products.reviews.post_on_by' date=date name=(lang 'products.reviews.anonymous_poster')}}
-                            </p>
-                        {{/if}}
                     </header>
                     <p class="productReview-body">{{{ sanitize text }}}</p>
                 </article>
