--- a/templates/pages/custom/page/team-page.html
+++ b/templates/pages/custom/page/team-page.html
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div class="team-page__images">
+        <div class="team-page__images is-open">
             <div class="container-full">
                 <div class="grid image__list gap-4">
                     <div class="row">
@@ -93,6 +93,16 @@
                             </i>
                         </a>
                     </div>
+
+                    <a href="#" class="open-banner-button bg-main">
+                        <i class="icon icon--invite">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20.289" height="20.343" viewBox="0 0 20.289 20.343">
+                                <g id="invite" transform="translate(0.05 0.123)">
+                                    <path id="invite-2" data-name="invite" d="M19.638,7.619,17.117,5.514V4.4a1.538,1.538,0,0,0-1.536-1.536H13.946L11.376.719a1.965,1.965,0,0,0-2.564,0L6.243,2.865H4.608A1.538,1.538,0,0,0,3.072,4.4V5.514L.551,7.619A1.537,1.537,0,0,0,0,8.8v9.64a1.977,1.977,0,0,0,1.975,1.975H18.214a1.977,1.977,0,0,0,1.975-1.975V8.8A1.537,1.537,0,0,0,19.638,7.619Zm-2.521-.39L18.5,8.388,17.117,9.546ZM9.66,1.727l.006-.005a.655.655,0,0,1,.857,0l.006.005,1.362,1.138H8.3ZM4.389,5.817h0V4.4a.22.22,0,0,1,.219-.219H15.581A.22.22,0,0,1,15.8,4.4V5.817h0v4.828l-5.271,4.4-.006.005a.655.655,0,0,1-.857,0l-.006-.005-5.271-4.4ZM3.072,7.229V9.546L1.685,8.387Zm15.8,11.209a.659.659,0,0,1-.658.658H1.975a.659.659,0,0,1-.658-.658V9.8l7.5,6.261a1.965,1.965,0,0,0,2.564,0l5.5-4.595h0L18.873,9.8Z" transform="translate(0 -0.243)" fill="#fff" stroke="#fff" stroke-width="0.1"/>
+                                </g>
+                            </svg>
+                        </i>
+                    </a>
                 </div>
             </div>
         </div>
