Done Add Bundle B2B

--- a/templates/components/common/navigation-menu.html
+++ b/templates/components/common/navigation-menu.html
@@ -105,7 +105,7 @@
         </li>
 
         <li class="navPages-item flex-align-center navPages-item--quote">
-            <a href="#" class="header-top__link flex-align-center navUser-item">
+            <a href="/quotes-list/add-to-quote" class="header-top__link flex-align-center navUser-item">
                 <div class="header-top__icon">
                     <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-quote-icon.png" alt="Quote Icon">
                 </div>
