--- a/templates/components/common/navigation.html
+++ b/templates/components/common/navigation.html
@@ -32,7 +32,7 @@
         </li>
 
         <!-- Quote -->
-        <a href="#" class="header-top__link flex-align-center navUser-item custom-animation" data-step-animate="3">
+        <li class="navUser-item navUser-item--quote" id="my-quote-entry-custom">
             <div class="header-top__icon">
                 <svg xmlns="http://www.w3.org/2000/svg" id="quote" width="13.333" height="15" viewBox="0 0 13.333 15">
                     <path id="Path_84" data-name="Path 84" d="M9.167,10.833h2.154L9.167,12.988Zm-7.5-9.167h10v7.5H7.5v4.167H1.667ZM0,0V15H9.512l3.822-3.821V0Z" fill="#ff5100"/>
@@ -41,10 +41,8 @@
                     <rect id="Rectangle_12" data-name="Rectangle 12" width="3" height="2" transform="translate(3.18 9.75)" fill="#ff5100"/>
                 </svg>
             </div>
-            <span class="header-top__text">
-                My Quote
-            </span>
-        </a>
+            <a class="navUser-action c00225 header-top__link flex-align-center navUser-item custom-animation" data-step-animate="3" href="javascript:void(0);" data-click="renderForm">My Quote<span class="quote-quantity countPill countPill--positive">0</span></a>
+        </li>
 
         <!-- Cart -->
         <li class="navUser-item navUser-item--cart header-top__link custom-animation" data-step-animate="4">
