Done Custom No Add Container

--- a/assets/scss/request-a-quote.scss
+++ b/assets/scss/request-a-quote.scss
@@ -10,6 +10,10 @@
         color: #ffffff;
         line-height: 20px;
         font-weight: 400;
+
+        &:hover {
+            color: #ff5100;
+        }
     }
 }
 
